gccida/g0/assign_parms
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/assign_parms/src/function.c:4770:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v7; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/assign_parms/src/function.c:4773:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v10; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/assign_parms/src/function.c:4774:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v11; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/assign_parms/src/function.c:4775:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v12; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/assign_parms/src/function.c:4776:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v13; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/assign_parms/src/function.c:4779:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v16; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/assign_parms/src/function.c:4791:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *tree; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/assign_parms/src/function.c:4809:7: error: use of undeclared identifier 'regno_decl'
tree *regno_decl; // rbx 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/assign_parms/src/function.c:4810:7: error: use of undeclared identifier 'v47'
tree *v47; // rbx 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/assign_parms/src/function.c:4811:7: error: use of undeclared identifier 'v48'
tree *v48; // rbx 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/assign_parms/src/function.c:4819:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v56; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/assign_parms/src/function.c:4820:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v57; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/assign_parms/src/function.c:4821:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v58; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/assign_parms/src/function.c:4835:5: error: expected ';' after expression
tree result; // [rsp+90h] [rbp-170h] 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/assign_parms/src/function.c:4835:6: error: use of undeclared identifier 'result'
tree result; // [rsp+90h] [rbp-170h] 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/assign_parms/src/function.c:4839:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode submode; // [rsp+B4h] [rbp-14Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/assign_parms/src/function.c:4847:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode promoted_nominal_mode; // [rsp+ECh] [rbp-114h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/assign_parms/src/function.c:4851:5: error: expected ';' after expression
tree inc; // [rsp+100h] [rbp-100h] 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/assign_parms/src/function.c:4851:6: error: use of undeclared identifier 'inc'; did you mean 'int'?
tree inc; // [rsp+100h] [rbp-100h] 
     ^~~
     int
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/assign_parms/src/obj/function.o] Error 1
